--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "victory": "^32.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
